--- a/ip2/css/style.css
+++ b/ip2/css/style.css
@@ -1,9 +1,144 @@
-#logo{
-  background-image: url("../img/landing.jpg");
-  padding:20%;
-  padding-bottom: 400px;
-  text-align: center;
-  background-size: cover;
-  height: 100vh;
+body {
+   font-family: Lora;
+    margin: 0px;
+    padding: 0px;
+}
 
+div#landing {
+   background-image: url(../img/landing.jpg);
+   background-repeat: no-repeat;
+   height: 636px;
+   margin: 0px;
+   text-align: center;
+}
+
+.motto {
+   color: white;
+   font-size: 26px;
+}
+
+/*#header {
+   width: 1200px;
+}*/
+#hours {
+   margin: 0;
+   padding: 0;
+}
+#hours p{
+   margin: 0px;
+   border-width: 25%;
+   border: 1px solid grey;
+   text-align: center;
+   padding-top: 15px;
+   height: 105px;
+   font-size: 24px;
+}
+
+.happy{
+   background-color: grey;
+
+}
+
+.party{
+   background-color: #ff751a ;
+}
+#hdImgs{
+   margin-left: 0px;
+   padding: 0px;
+   margin-right: 0px;
+   /*width: 25%;*/
+   }
+.headerImg{
+   margin-left: 0px;
+   padding: 0px;
+   margin-right: 0px;
+   }
+
+#foodimg {
+   margin: 30px 20px;
+   float: left;
+   box-shadow: 1px 1px 1px 1px #ffccff ;
+   padding: 10px;
+   background-color: whitesmoke;
+
+}
+
+.foodP{
+   width:300px;
+   float: left;
+   text-indent: 2px;
+   padding: 20px;
+
+
+}
+
+#drinkimg {
+   margin-bottom: 0px;
+   float: right;
+   box-shadow: 1px 1px 1px 1px #ffccff ;
+   padding: 10px;
+   background-color: whitesmoke;
+}
+
+#bottomMenu {
+   background-image: url(../img/foodsBg.jpg);
+   background-repeat: no-repeat;
+   height: 599px;
+   margin-top: 30px;
+   padding-top: 100px;
+
+}
+
+
+#bMenugrnd {
+   /*margin: auto;*/
+   width: 75%;
+   height: 70%;
+   background-color: whitesmoke;
+   padding-top: 40px;
+
+}
+
+#bMenugrnd li {
+   width: 200px;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 90%;
+   font-weight: bold;
+}
+
+.bmenuImg{
+   width: 30%;
+   margin-left: 15px;
+}
+
+.txt {
+   color: red;
+}
+
+.customers {
+   height:auto;
+   width: 70%;
+   margin: 5% 16% ;
+   padding: 15px;
+   box-shadow: 1px 1px 1px 1px #ff4da6 ;
+   background-color: whitesmoke;
+}
+
+.clients {
+   height:250px;
+   width: 50%;
+   float: left;
+   padding: 5px;
+   text-align: center;
+}
+.clients h2 {
+   color: red;
+/*#fm{
+ text-align: center;
+ padding: 30%;
+}*/
+#menuarea{
+ background-image: url("../img/subscribe.jpg");
+ background-repeat: no-repeat;
+ height: 500px;
 }
